--- a/weedWeb/package.json
+++ b/weedWeb/package.json
@@ -24,10 +24,12 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "clipboard": "2.0.10",
+    "leaflet": "^1.9.3",
     "ngx-clipboard": "15.0.1",
     "ngx-toastr": "14.2.2",
     "nouislider": "15.5.1",
-    "leaflet": "^1.9.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
