--- a/weedWeb/angular.json
+++ b/weedWeb/angular.json
@@ -24,6 +24,8 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
+
               "src/styles.css"
             ],
             "scripts": ["node_modules/clipboard/dist/clipboard.min.js"]
