--- a/weedWeb/package.json
+++ b/weedWeb/package.json
@@ -29,6 +29,7 @@
     "ngx-clipboard": "15.0.1",
     "ngx-toastr": "14.2.2",
     "nouislider": "15.5.1",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.1",
     "rxjs": "~7.5.0",
