--- a/weedWeb/angular.json
+++ b/weedWeb/angular.json
@@ -85,6 +85,9 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
+            "include": [
+              "src/app/services/services.service.spec.ts"
+            ],
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
