--- a/ApiweedWeb/requirements.txt
+++ b/ApiweedWeb/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 Django==4.1.7
 django-cors-headers==3.14.0
+django-filter==23.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 psycopg2==2.9.5
