--- a/weedWeb/package.json
+++ b/weedWeb/package.json
@@ -36,6 +36,7 @@
     "primeicons": "^6.0.1",
     "primeng": "^14.2.1",
     "rxjs": "~7.5.0",
+    "swiper": "^9.3.2",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
     "zone.js": "~0.11.4"
