--- a/weedWeb/package.json
+++ b/weedWeb/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "clipboard": "2.0.10",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
     "ngx-clipboard": "15.0.1",
     "ngx-toastr": "14.2.2",
