--- a/ApiweedWeb/requirements.txt
+++ b/ApiweedWeb/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==3.14.0
 django-filter==23.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+gunicorn==20.1.0
 idna==3.4
 psycopg2==2.9.5
 PyJWT==2.6.0
