--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
-      "ngx-bootstrap": "^10.2.0",
-      "primeng": "^15.3.0",
-      "swiper": "^9.3.2"
+        "ngx-bootstrap": "^10.2.0",
+        "primeicons": "^6.0.1",
+        "primeng": "^15.3.0",
+        "swiper": "^9.3.2"
     }
-  }
+}
