--- a/weedWeb/angular.json
+++ b/weedWeb/angular.json
@@ -40,8 +40,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "6mb",
+                  "maximumError": "10mb"
                 }
               ],
               "fileReplacements": [
